@@ -1,7 +1,7 @@
 #
 # Copyright (c) 1998, 1999
 #             Shigio Yamaguchi. All rights reserved.
-# Copyright (c) 1999, 2000, 2001
+# Copyright (c) 1999, 2000, 2001, 2002
 #             Tama Communications Corporation. All rights reserved.
 #
 # This file is part of GNU GLOBAL.
@@ -174,4 +174,5 @@ htags:\
 	:sharp_begin=<FONT COLOR=darkred>:sharp_end=</FONT>:\
 	:brace_begin=<FONT COLOR=blue>:brace_end=</FONT>:\
 	:reserved_begin=<B>:reserved_end=</B>:script_alias=/cgi-bin/:\
-	:ncol#4:tabs#8:normal_suffix=html:gzipped_suffix=ghtml:
+	:ncol#4:tabs#8:normal_suffix=html:gzipped_suffix=ghtml:\
+	:definition_header=after:
